resolving issue with navbar being midway up page on tablet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@ html {
 body {
     color:#FBFCFB;
     background-color:#FBFCFB;
+     
 }
 .divider {
   max-width: 5rem;
@@ -41,7 +42,21 @@ body {
     font-family: montserrat;
     font-weight:200;
     letter-spacing:0.1rem;
-
+     position: absolute;
+ bottom: 0;
+ width: 100%;
+}
+html,
+body {
+ height: 100%;
+ position: relative;
+}
+.main-container {
+ min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
 }
 
 /* HOME PAGE STYLING */ 
@@ -96,7 +111,7 @@ body {
 }
 .howitworks {
     padding-top:8rem;
-    padding-bottom:9rem;
+    padding-bottom:16rem;
     padding-left:3rem;
     padding-right:3rem;
 }
